--- a/admin/css/woo-Partner-admin.css
+++ b/admin/css/woo-Partner-admin.css
@@ -2,3 +2,7 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+ .ref-info .form-table td a {
+    text-decoration: none;
+}
